--- a/Options.xaml
+++ b/Options.xaml
@@ -960,7 +960,7 @@
                                     $$FORMAT_DATETIME format$$
                                 </TextBox>
                                 <TextBlock Grid.Row="7" Grid.Column="1">
-                                    Inserts a custom local date and time format. Replace<Span FontWeight="Bold"><Span FontStyle="Italic">format</Span></Span>
+                                    Inserts a custom local date and time format. Replace <Span FontWeight="Bold"><Span FontStyle="Italic">format</Span></Span>
                                     with any<LineBreak />
                                     arrangement of<Hyperlink NavigateUri="https://docs.microsoft.com/dotnet/standard/base-types/custom-date-and-time-format-strings" RequestNavigate="Hyperlink_RequestNavigate">date and time format specifiers</Hyperlink>
                                 </TextBlock>
@@ -980,10 +980,8 @@
                                     Grid.Row="8"
                                     Grid.Column="1"
                                     Margin="0,5,0,0">
-                                    Same as<Span FontWeight="Bold">
-                                        $$FORMAT_DATETIME<Span FontStyle="Italic">format</Span>
-                                        $$</Span>
-                                    but uses UTC date and time instead</TextBlock>
+                                    Same as <Span FontWeight="Bold">
+                                        $$FORMAT_DATETIME <Span FontStyle="Italic">format</Span>$$</Span> but uses UTC date and time instead</TextBlock>
                             </Grid>
 
                             <Grid Margin="0,10,0,0">
