--- a/TTS/SendToTTSTemplate.xaml
+++ b/TTS/SendToTTSTemplate.xaml
@@ -1,4 +1,11 @@
-﻿<ResourceDictionary
+﻿<!--
+    Copyright © Dale Ghent <daleg@elemental.org> and contributors
+
+    This Source Code Form is subject to the terms of the Mozilla Public
+    License, v. 2.0. If a copy of the MPL was not distributed with this
+    file, You can obtain one at http://mozilla.org/MPL/2.0/.
+-->
+<ResourceDictionary
     x:Class="DaleGhent.NINA.GroundStation.TTS.SendToTTSTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
