--- a/Options.xaml
+++ b/Options.xaml
@@ -818,6 +818,63 @@
                 </StackPanel>
             </TabItem>
 
+            <TabItem Name="TTS" Header="Text-to-Speech">
+                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                    <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="ms-settings:speech" RequestNavigate="Hyperlink_RequestNavigate">
+                            <Run Text="Open Windows Text-to-speech settings" />
+                        </Hyperlink>
+                    </TextBlock>
+
+                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Test messaage</TextBlock.Text>
+                        </TextBlock>
+                        <TextBox
+                            Width="400"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center">
+                            <TextBox.Text>
+                                <Binding Path="TtsTestMessage" />
+                            </TextBox.Text>
+                        </TextBox>
+                    </StackPanel>
+
+                    <ninactrl:AsyncProcessButton
+                        Width="515"
+                        Height="25"
+                        Margin="0,0,0,5"
+                        HorizontalAlignment="Left"
+                        ButtonForegroundBrush="{StaticResource ButtonForegroundBrush}"
+                        ButtonText="Send Test Message"
+                        Command="{Binding TtsTestCommand}"
+                        LoadingImageBrush="{StaticResource PrimaryBrush}" />
+
+                    <GroupBox Margin="0,10,0,0" Header="Failure message template">
+                        <StackPanel Orientation="Vertical">
+                            <StackPanel Margin="0,0,0,0" Orientation="Vertical">
+                                <TextBox
+                                    MinWidth="515"
+                                    MinHeight="400"
+                                    MaxWidth="515"
+                                    MaxHeight="400"
+                                    Margin="0,5,0,0"
+                                    HorizontalAlignment="Left"
+                                    AcceptsReturn="True"
+                                    AcceptsTab="True"
+                                    HorizontalScrollBarVisibility="Visible"
+                                    Text="{Binding TTSFailureMessage}"
+                                    VerticalScrollBarVisibility="Visible" />
+                            </StackPanel>
+                        </StackPanel>
+                    </GroupBox>
+                </StackPanel>
+            </TabItem>
+
             <TabItem Name="Token_Help" Header="Message Token Help">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical">
                     <TextBlock
