--- a/HTTP/HttpClientTemplate.xaml
+++ b/HTTP/HttpClientTemplate.xaml
@@ -24,7 +24,9 @@
         <nina:SequenceBlockView>
             <nina:SequenceBlockView.SequenceItemContent>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock VerticalAlignment="Center" Text="Method" />
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        Text="Method" />
                     <ComboBox
                         MinWidth="100"
                         Margin="5,0,0,0"
@@ -38,7 +40,7 @@
                     <TextBox
                         MinWidth="300"
                         MaxWidth="300"
-                        Margin="5,0,0,0"
+                        Margin="5,3,0,3"
                         TextWrapping="NoWrap"
                         HorizontalScrollBarVisibility="Auto"
                         Text="{Binding HttpUri}"
@@ -48,16 +50,17 @@
 
                     <TextBlock VerticalAlignment="Center" Margin="10,0,0,0" Text="POST Body" />
                     <TextBox
-                        MinWidth="200"
-                        MaxWidth="400"
+                        MinWidth="500"
+                        MaxWidth="500"
+                        MaxHeight="150"
+                        Margin="5,3,0,3"
                         TextWrapping="Wrap"
-                        AcceptsReturn="True"
-                        AcceptsTab="True"
                         HorizontalScrollBarVisibility="Auto"
                         VerticalScrollBarVisibility="Auto"
-                        Margin="5,0,0,0"
-                        Text="{Binding HttpPostBody}"
-                        TextAlignment="Left" />
+                        AcceptsReturn="True"
+                        AcceptsTab="True"
+                        TextAlignment="Left"
+                        Text="{Binding HttpPostBody}" />
                 </StackPanel>
             </nina:SequenceBlockView.SequenceItemContent>
         </nina:SequenceBlockView>
