--- a/Telegram/SendToTelegramTemplate.xaml
+++ b/Telegram/SendToTelegramTemplate.xaml
@@ -21,18 +21,21 @@
         <nina:SequenceBlockView>
             <nina:SequenceBlockView.SequenceItemContent>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="Message" />
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        Text="Message" />
                     <TextBox
-                        MinWidth="100"
-                        MaxWidth="400"
+                        MinWidth="500"
+                        MaxWidth="500"
+                        MaxHeight="150"
+                        Margin="5,3,0,3"
                         TextWrapping="Wrap"
+                        HorizontalScrollBarVisibility="Auto"
+                        VerticalScrollBarVisibility="Auto"
                         AcceptsReturn="True"
                         AcceptsTab="True"
-                        HorizontalScrollBarVisibility="Visible"
-                        VerticalScrollBarVisibility="Visible"
-                        Margin="5,0,0,0"
-                        Text="{Binding Message}"
-                        TextAlignment="Left" />
+                        TextAlignment="Left"
+                        Text="{Binding Message}" />
 
                     <TextBlock VerticalAlignment="Center" Margin="10,0,0,0" Text="|" />
 
