--- a/Options.xaml
+++ b/Options.xaml
@@ -933,6 +933,70 @@
                 </StackPanel>
             </TabItem>
 
+            <TabItem Name="PlaySound" Header="Sounds">
+                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Default sound</TextBlock.Text>
+                        </TextBlock>
+                        <TextBox
+                            MinWidth="300"
+                            MaxWidth="500"
+                            MaxHeight="150"
+                            Margin="5,3,0,3"
+                            HorizontalScrollBarVisibility="Auto"
+                            VerticalScrollBarVisibility="Auto"
+                            TextAlignment="Left"
+                            TextWrapping="Wrap"
+                            Text="{Binding PlaySoundDefaultFile}" />
+                        
+                        <Button
+                            Width="25"
+                            Margin="5"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Command="{Binding SelectDefaultSoundFileCommand}">
+                                <Button.Content>
+                                    <TextBlock Foreground="{StaticResource ButtonForegroundBrush}" Text="..." />
+                                </Button.Content>
+                        </Button>
+                    </StackPanel>
+
+                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Default failure sound</TextBlock.Text>
+                        </TextBlock>
+                        <TextBox
+                            MinWidth="300"
+                            MaxWidth="500"
+                            MaxHeight="150"
+                            Margin="5,3,0,3"
+                            HorizontalScrollBarVisibility="Auto"
+                            VerticalScrollBarVisibility="Auto"
+                            TextAlignment="Left"
+                            TextWrapping="Wrap"
+                            Text="{Binding PlaySoundDefaultFailureFile}" />
+
+                        <Button
+                            Width="25"
+                            Margin="5"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Command="{Binding SelectDefaultFailureSoundFileCommand}">
+                            <Button.Content>
+                                <TextBlock Foreground="{StaticResource ButtonForegroundBrush}" Text="..." />
+                            </Button.Content>
+                        </Button>
+                    </StackPanel>
+                </StackPanel>
+            </TabItem>
+
             <TabItem Name="Token_Help" Header="Message Token Help">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical">
                     <TextBlock
