--- a/Options.xaml
+++ b/Options.xaml
@@ -1,5 +1,5 @@
 ﻿<!--
-    Copyright Dale Ghent <daleg@elemental.org>
+    Copyright 2021-2024 Dale Ghent <daleg@elemental.org>
 
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -485,6 +485,100 @@
                 </StackPanel>
             </TabItem>
 
+            <TabItem Name="Discord" Header="Discord">
+                <StackPanel Margin="0,10,0,0" Orientation="Vertical">
+                    <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
+                        <Hyperlink NavigateUri="https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks" RequestNavigate="Hyperlink_RequestNavigate">Discord webhook help</Hyperlink>
+                    </TextBlock>
+
+                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Webhook URL</TextBlock.Text>
+                            <TextBlock.ToolTip>The default webhook URL you wish to send messages to</TextBlock.ToolTip>
+                        </TextBlock>
+                        <TextBox
+                            Width="400"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            Text="{Binding DiscordWebhookDefaultUrl}" />
+                    </StackPanel>
+
+                    <StackPanel Margin="0,0,0,15" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Bot name</TextBlock.Text>
+                        </TextBlock>
+                        <TextBox
+                            Width="200"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            Text="{Binding DiscordWebhookDefaultBotName}" />
+                    </StackPanel>
+
+                    <ninactrl:AsyncProcessButton
+                        Width="515"
+                        Height="25"
+                        Margin="0,0,0,5"
+                        HorizontalAlignment="Left"
+                        ButtonForegroundBrush="{StaticResource ButtonForegroundBrush}"
+                        ButtonText="Send Test Message"
+                        Command="{Binding DiscordWebhookTestCommand}"
+                        LoadingImageBrush="{StaticResource PrimaryBrush}" />
+
+                    <TabControl TabStripPlacement="Top">
+                        <TabItem Name="Discord_FailureMessage" Header="Failure Message">
+                            <GroupBox Margin="0,10,0,0" Header="Failure message template">
+                                <StackPanel Orientation="Vertical">
+                                    <StackPanel Margin="0,0,0,0" Orientation="Vertical">
+                                        <TextBox
+                                            MinWidth="515"
+                                            MinHeight="400"
+                                            MaxWidth="515"
+                                            MaxHeight="400"
+                                            Margin="0,5,0,0"
+                                            HorizontalAlignment="Left"
+                                            AcceptsReturn="True"
+                                            AcceptsTab="True"
+                                            HorizontalScrollBarVisibility="Visible"
+                                            Text="{Binding DiscordWebhookFailureMessage}"
+                                            VerticalScrollBarVisibility="Visible" />
+                                    </StackPanel>
+                                </StackPanel>
+                            </GroupBox>
+                        </TabItem>
+
+                        <TabItem Name="Discord_ImageMessage" Header="Image Message">
+                            <GroupBox Margin="0,10,0,0" Header="Failure message template">
+                                <StackPanel Orientation="Vertical">
+                                    <StackPanel Margin="0,0,0,0" Orientation="Vertical">
+                                        <TextBox
+                                            MinWidth="515"
+                                            MinHeight="400"
+                                            MaxWidth="515"
+                                            MaxHeight="400"
+                                            Margin="0,5,0,0"
+                                            HorizontalAlignment="Left"
+                                            AcceptsReturn="True"
+                                            AcceptsTab="True"
+                                            HorizontalScrollBarVisibility="Visible"
+                                            Text="{Binding DiscordWebhookFailureMessage}"
+                                            VerticalScrollBarVisibility="Visible" />
+                                    </StackPanel>
+                                </StackPanel>
+                            </GroupBox>
+                        </TabItem>
+
+                    </TabControl>
+                </StackPanel>
+            </TabItem>
+
             <TabItem Name="IFTTT_Webhooks" Header="IFTTT Webhooks">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical">
                     <TextBlock Margin="0,5,0,5" VerticalAlignment="Center">
@@ -889,7 +983,7 @@
                             Width="110"
                             HorizontalAlignment="Right"
                             VerticalAlignment="Center">
-                            <TextBlock.Text>Test messaage</TextBlock.Text>
+                            <TextBlock.Text>Test message</TextBlock.Text>
                         </TextBlock>
                         <TextBox
                             Width="400"
