--- a/HTTP/HttpClientSetupView.xaml
+++ b/HTTP/HttpClientSetupView.xaml
@@ -3,16 +3,15 @@
 
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
-    file, You can obtain one at http://mozilla.org/MPL/2.0/.
--->
+    file, You can obtain one at http://mozilla.org/MPL/2.0/.-->
 <UserControl
-    x:Class="DaleGhent.NINA.GroundStation.HTTP.HttpClientSetup"
+    x:Class="DaleGhent.NINA.GroundStation.HTTP.HttpClientSetupView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:enum="clr-namespace:NINA.Core.Enum;assembly=NINA.Core"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:DaleGhent.NINA.GroundStation.HTTP"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ninactrl="clr-namespace:NINA.CustomControlLibrary;assembly=NINA.CustomControlLibrary"
     xmlns:util="clr-namespace:NINA.Core.Utility;assembly=NINA.Core"
     Name="UC"
@@ -34,65 +33,65 @@
         </Grid.ColumnDefinitions>
 
         <TextBlock
-            Margin="5,10,0,0"
-            Text="Method"
             Grid.Row="0"
-            Grid.Column="0"/>
+            Grid.Column="0"
+            Margin="5,10,0,0"
+            Text="Method" />
         <ComboBox
-            Margin="10,10,0,0"
-            MinWidth="100"
-            ItemsSource="{Binding HttpMethods}"
-            SelectedItem="{Binding HttpMethod}"
             Grid.Row="0"
-            Grid.Column="1" />
-
+            Grid.Column="1"
+            MinWidth="100"
+            Margin="10,10,0,0"
+            ItemsSource="{Binding Source={x:Static local:HttpClient.HttpMethods}}"
+            SelectedItem="{Binding HttpMethod, Mode=TwoWay}" />
+        <!--  to use a static enum you need to use the above syntax to get them  -->
 
         <TextBlock
-            Margin="5,10,0,0"
-            Text="URL"
             Grid.Row="1"
-            Grid.Column="0" />
+            Grid.Column="0"
+            Margin="5,10,0,0"
+            Text="URL" />
         <TextBox
+            Grid.Row="1"
+            Grid.Column="1"
             Margin="10,10,0,0"
-            MaxLines="1"
             HorizontalAlignment="Left"
-            TextWrapping="NoWrap"
             HorizontalScrollBarVisibility="Auto"
+            MaxLines="1"
             Text="{Binding HttpUri}"
-            TextAlignment="Left" 
-            Grid.Row="1"
-            Grid.Column="1" />
+            TextAlignment="Left"
+            TextWrapping="NoWrap" />
 
         <TextBlock
-            Margin="5,10,0,0"
-            Text="Type"
             Grid.Row="2"
-            Grid.Column="0" />
+            Grid.Column="0"
+            Margin="5,10,0,0"
+            Text="Type" />
         <TextBox
+            Grid.Row="2"
+            Grid.Column="1"
             Margin="10,10,0,0"
+            HorizontalAlignment="Left"
+            HorizontalScrollBarVisibility="Auto"
             MaxLines="1"
-            HorizontalAlignment="Left"
-            TextWrapping="NoWrap"
-            HorizontalScrollBarVisibility="Auto"
             Text="{Binding HttpPostContentType}"
-            Grid.Row="2"
-            Grid.Column="1" />
+            TextWrapping="NoWrap" />
 
         <TextBlock
-            Margin="5,10,0,0"
-            Text="POST Body"
             Grid.Row="3"
-            Grid.Column="0" />
+            Grid.Column="0"
+            Margin="5,10,0,0"
+            Text="POST Body" />
         <TextBox
+            Grid.Row="3"
+            Grid.Column="1"
             Margin="10,10,0,0"
             HorizontalAlignment="Left"
-            TextWrapping="Wrap"
-            HorizontalScrollBarVisibility="Auto"
-            VerticalScrollBarVisibility="Auto"
             AcceptsReturn="True"
             AcceptsTab="True"
-            Text="{Binding HttpPostBody}" 
-            Grid.Row="3"
-            Grid.Column="1" />
+            HorizontalScrollBarVisibility="Auto"
+            Text="{Binding HttpPostBody}"
+            TextWrapping="Wrap"
+            VerticalScrollBarVisibility="Auto" />
     </Grid>
 </UserControl>
